# mazegen

./: .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  hexmaze.cpp  hexmaze.h  mazegen.cpp  svg_painter.cpp  svg_painter.h
maze4kids/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
maze4kids/src/: App.svelte  app.css
maze4kids/src/lib/: CoffeeIcon.svelte  StarIcon.svelte
maze4kids/src/lib/maze/: CreateMazeWilson.ts  HexMaze.ts  MazeGrid.ts  Painter.ts  PaperSize.ts  SquareMaze.ts  SvgPainter.ts
maze4kids/test/: HexMaze.test.ts  SquareMaze.test.ts
src/: CMakeLists.txt  brick_maze.cpp  brick_maze.h  gen_wilson.h  hexmaze.cpp  hexmaze.h  main.cpp  matrix.h  maze_grid.h  node_index_2d.h  painter.h  square_maze.cpp  square_maze.h  svg_painter.cpp  svg_painter.h
tests/: test_brick_maze.cpp  test_gen_wilson.cpp  test_hexmaze.cpp  test_square_maze.cpp
webapp/: package-lock.json  package.json  tsconfig.json  webpack.config.js
webapp/src/: index.ts
webapp/static/: index.html
